<?xml version="1.0" encoding="utf-8"?>
<com.mediatek.teledongledemo.Tedongle_sim_pin
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidprv="http://schemas.android.com/apk/res/com.mediatek.teledongledemo"
    android:id="@+id/tedongle_sim_pin_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    
    <TextView 
        android:id="@+id/input_title"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:singleLine="true"
	    android:ellipsize="marquee"
	    android:textAppearance="?android:attr/textAppearance"
	    android:textColor="#ffffff"
	    android:textSize="17dp"
	    android:clickable="true"
        />
    <TextView 
        android:id="@+id/sim_slot"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:singleLine="true"
	    android:ellipsize="marquee"
	    android:textAppearance="?android:attr/textAppearance"
	    android:textColor="#ffffff"
	    android:textSize="17dp"
	    android:text="@string/tedongle_sim_in"/>
    <LinearLayout
       android:id="@+id/keyguard_bouncer_frame"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:orientation="vertical"
       android:layout_weight="1"
       android:layoutDirection="ltr"
       >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:orientation="horizontal"
           android:layout_weight="1"
           >
           <TextView android:id="@+id/pinEntry"
               android:editable="true"
               android:layout_width="0dip"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:gravity="center"
               android:singleLine="true"
               android:cursorVisible="false"
               android:background="@null"
               android:textAppearance="@style/TextAppearance.NumPadKey"
               android:imeOptions="flagForceAscii|actionDone"
               />
           <ImageButton android:id="@+id/delete_button"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:gravity="center_vertical"
               android:src="@drawable/ic_input_delete"
               android:clickable="true"
               android:paddingTop="8dip"
               android:paddingBottom="8dip"
               android:paddingLeft="24dp"
               android:paddingRight="24dp"
               android:background="?android:attr/selectableItemBackground"
               android:contentDescription="@string/keyboardview_keycode_delete"
               />
       </LinearLayout>
       <View
           android:layout_width="wrap_content"
           android:layout_height="1dp"
           android:background="#55FFFFFF"
           />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="horizontal"
           >
           <view class="com.mediatek.teledongledemo.NumPadKey"
               android:id="@+id/key1"
               style="@style/Widget.Button.NumPadKey"
               android:layout_width="0px"
               android:layout_height="match_parent"
               android:layout_weight="1"
               androidprv:textView="@+id/pinEntry"
               androidprv:digit="1"
               />
           <view class="com.mediatek.teledongledemo.NumPadKey"
               android:id="@+id/key2"
               style="@style/Widget.Button.NumPadKey"
               android:layout_width="0px"
               android:layout_height="match_parent"
               android:layout_weight="1"
               androidprv:textView="@+id/pinEntry"
               androidprv:digit="2"
               />
           <view class="com.mediatek.teledongledemo.NumPadKey"
               android:id="@+id/key3"
               style="@style/Widget.Button.NumPadKey"
               android:layout_width="0px"
               android:layout_height="match_parent"
               android:layout_weight="1"
               androidprv:textView="@+id/pinEntry"
               androidprv:digit="3"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="horizontal"
           >
           <view class="com.mediatek.teledongledemo.NumPadKey"
               android:id="@+id/key4"
               style="@style/Widget.Button.NumPadKey"
               android:layout_width="0px"
               android:layout_height="match_parent"
               android:layout_weight="1"
               androidprv:textView="@+id/pinEntry"
               androidprv:digit="4"
               />
           <view class="com.mediatek.teledongledemo.NumPadKey"
               android:id="@+id/key5"
               style="@style/Widget.Button.NumPadKey"
               android:layout_width="0px"
               android:layout_height="match_parent"
               android:layout_weight="1"
               androidprv:textView="@+id/pinEntry"
               androidprv:digit="5"
               />
           <view class="com.mediatek.teledongledemo.NumPadKey"
               android:id="@+id/key6"
               style="@style/Widget.Button.NumPadKey"
               android:layout_width="0px"
               android:layout_height="match_parent"
               android:layout_weight="1"
               androidprv:textView="@+id/pinEntry"
               androidprv:digit="6"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:orientation="horizontal"
           android:layout_weight="1"
           >
           <view class="com.mediatek.teledongledemo.NumPadKey"
               android:id="@+id/key7"
               style="@style/Widget.Button.NumPadKey"
               android:layout_width="0px"
               android:layout_height="match_parent"
               android:layout_weight="1"
               androidprv:textView="@+id/pinEntry"
               androidprv:digit="7"
               />
           <view class="com.mediatek.teledongledemo.NumPadKey"
               android:id="@+id/key8"
               style="@style/Widget.Button.NumPadKey"
               android:layout_width="0px"
               android:layout_height="match_parent"
               android:layout_weight="1"
               androidprv:textView="@+id/pinEntry"
               androidprv:digit="8"
               />
           <view class="com.mediatek.teledongledemo.NumPadKey"
               android:id="@+id/key9"
               style="@style/Widget.Button.NumPadKey"
               android:layout_width="0px"
               android:layout_height="match_parent"
               android:layout_weight="1"
               androidprv:textView="@+id/pinEntry"
               androidprv:digit="9"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="horizontal"
           >
           <ImageButton
               android:id="@+id/key_dismiss"
               style="@style/Widget.Button.NumPadKey"
               android:layout_width="0px"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:paddingRight="30dp"
               android:src="@drawable/ic_menu_close_clear_cancel"
               android:contentDescription="@string/keyboardview_keycode_enter"
               />
           <view class="com.mediatek.teledongledemo.NumPadKey"
               android:id="@+id/key0"
               style="@style/Widget.Button.NumPadKey"
               android:layout_width="0px"
               android:layout_height="match_parent"
               android:layout_weight="1"
               androidprv:textView="@+id/pinEntry"
               androidprv:digit="0"
               />
           <ImageButton
               android:id="@+id/key_enter"
               style="@style/Widget.Button.NumPadKey"
               android:layout_width="0px"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:paddingRight="30dp"
               android:src="@drawable/sym_keyboard_return_holo"
               android:contentDescription="@string/keyboardview_keycode_enter"
               />
       </LinearLayout>
    </LinearLayout>


</com.mediatek.teledongledemo.Tedongle_sim_pin>